fix: mapstruct bug